<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.marketplace</groupId>
		<artifactId>Marketplace</artifactId>
		<version>0.0.1</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>main</artifactId>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.marketplace</groupId>
			<artifactId>auth</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.marketplace</groupId>
			<artifactId>product</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.marketplace</groupId>
			<artifactId>common</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.marketplace</groupId>
			<artifactId>user</artifactId>
			<version>0.0.1</version>
		</dependency>
	</dependencies>

</project>